Add "artists" option to artwork select input

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -155,6 +155,7 @@
 	<select name="values" class="js-column_artwork [form-control]">
 		<option value="">Select a Category</option>
 		<option value="name">Name</option>
+		<option value="artists">Artist</option>
 	</select>
 </script>
 
