Add exhibitions, parks options to artwork select

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -156,6 +156,8 @@
 		<option value="">Select a Category</option>
 		<option value="name">Name</option>
 		<option value="artists">Artist</option>
+		<option value="exhibitions">Exhibition</option>
+		<option value="parks">Park</option>
 	</select>
 </script>
 
