Pluralize org, artwork, park options in exhibition select

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -180,9 +180,9 @@
 		<option value="name">Exhibition Name</option>
 		<option value="start_date">Start Date</option>
 		<option value="end_date">End Date</option>
-		<option value="org">Org</option>
-		<option value="artwork">Artwork</option>
-		<option value="park">Park</option>
+		<option value="orgs">Org</option>
+		<option value="artworks">Artwork</option>
+		<option value="parks">Park</option>
 	</select>
 </script>
 
