Update name select options to be more specific
Name > Park Name, Name > Artist Name, Name > Org Name

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -154,7 +154,7 @@
 <script id="js-template_artwork" type="text/template">
 	<select name="values" class="js-column_artwork [form-control]">
 		<option value="">Select a Category</option>
-		<option value="name">Name</option>
+		<option value="name">Artwork Name</option>
 		<option value="artists">Artist</option>
 		<option value="exhibitions">Exhibition</option>
 		<option value="parks">Park</option>
@@ -164,7 +164,7 @@
 <script id="js-template_park" type="text/template">
 	<select name="values" class="js-column_park [form-control]">
 		<option value="">Select a Category</option>
-		<option value="name">Name</option>
+		<option value="name">Park Name</option>
 		<option value="park_id">Park ID</option>
 		<option value="borough">Borough</option>
 		<option value="address">Address</option>
@@ -189,9 +189,10 @@
 <script id="js-template_org" type="text/template">
 	<select name="values" class="js-column_org [form-control]">
 		<option value="">Select a Category</option>
-		<option value="name">Name</option>
+		<option value="name">Organization Name</option>
 		<option value="website">Website</option>
 		<option value="phone">Phone</option>
+		<option value="exhibitions">Exhibition</option>
 	</select>
 </script>
 
