Add Import Results modal

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -102,6 +102,27 @@
 
 </div>
 
+<!-- Import Results modal -->
+<div id="js-modal_results" class="[ modal fade ]" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="[ modal-dialog ]" role="document">
+		<div class="[ modal-content ]">
+			<div class="bg-green [ modal-header ]">
+				<h5 class="[ modal-title ]" id="">IMPORT RESULTS</h5>
+				<button type="button" class="js-cancel-modal [ close ]" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="[ modal-body px-4 ]">
+
+			</div>
+			<div class="[ modal-footer ]">
+				<button id="js-modal-cancel_export" class="js-cancel-modal butt butt--delete" type="button" data-dismiss="modal">Cancel</button>
+				<button id="js-modal-post_export" class="js-post-modal butt butt--create" type="button" data-toggle="modal">Export</button>
+			</div>
+		</div>
+	</div>
+</div>
+
 <!-- Empty error template -->
 <script id="js-template_error" type="text/template">
 	<div class="[ alert alert-danger alert-dismissible fade show mb-0 ]" role="alert">
