--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %}
 {% block head_extras %}
 <script src="{{ url_for('static', filename='js/dist/import.bundle.js') }}"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.js" 
+				integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+				crossorigin="anonymous"></script>
+<meta name="csrf-token" content="{{ csrf_token() }}">
 {% endblock %}
 {% block title %}Parks Database – Import Data{% endblock %}
 {% block content %}
