Wrap export data info in form

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -110,19 +110,23 @@
 <div id="js-modal_results" class="[ modal fade ]" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="[ modal-dialog ]" role="document">
 		<div class="[ modal-content ]">
-			<div class="bg-green [ modal-header ]">
-				<h5 class="[ modal-title ]" id="">IMPORT RESULTS</h5>
-				<button type="button" class="js-cancel-modal [ close ]" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="[ modal-body px-4 ]">
+			<form id="js-form_export" action="{{ url_for('export_data') }}" method="POST">
+				<input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+				<input type="hidden" id="export_data" name="export_data" />
+				<div class="bg-green [ modal-header ]">
+					<h5 class="[ modal-title ]" id="">IMPORT RESULTS</h5>
+					<button type="button" class="js-cancel-modal [ close ]" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="[ modal-body px-4 ]">
 
-			</div>
-			<div class="[ modal-footer ]">
-				<button id="js-modal-cancel_export" class="js-cancel-modal butt butt--delete" type="button" data-dismiss="modal">Cancel</button>
-				<button id="js-modal-post_export" class="js-post-modal butt butt--create" type="button" data-toggle="modal">Export</button>
-			</div>
+				</div>
+				<div class="[ modal-footer ]">
+					<button id="js-modal-cancel_export" class="js-cancel-modal butt butt--delete" type="button" data-dismiss="modal">No Thanks</button>
+					<button id="js-modal-post_export" class="js-post-modal butt butt--create" type="button" data-toggle="modal">Export</button>
+				</div>
+			</form>
 		</div>
 	</div>
 </div>
