Remove mobile nav icon border

--- a/app/templates/include/nav.html
+++ b/app/templates/include/nav.html
@@ -4,8 +4,8 @@
     <div class="[ row justify-content-end ]">
       <div class="[ col ]">
         <nav class="[ navbar navbar-light w-100 justify-content-end ]">
-          <button class="[ navbar-toggler ]" type="button" data-toggle="collapse" data-target="#dropdownMenuMobile" aria-controls="dropdownMenuMobile" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="[ navbar-toggler-icon ]"></span>
+          <button class="[ navbar-toggler border-0 ]" type="button" data-toggle="collapse" data-target="#dropdownMenuMobile" aria-controls="dropdownMenuMobile" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="[ navbar-toggler-icon h3 mb-0 ]"></span>
           </button>
         </nav>
         <div class="[ collapse w-100 ]" id="dropdownMenuMobile">
