--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -1,9 +1,6 @@
 {% extends "layout.html" %}
 {% block head_extras %}
 <script src="{{ url_for('static', filename='js/dist/import.bundle.js') }}"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.js" 
-				integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-				crossorigin="anonymous"></script>
 <meta name="csrf-token" content="{{ csrf_token() }}">
 {% endblock %}
 {% block title %}Parks Database – Import Data{% endblock %}
@@ -38,7 +35,7 @@
 
 								<li class="[ row mb-3 justify-content-center align-items-baseline ]">
 									<div class="[ col-sm-10 col-md-8 input-group ]">
-										<label class="butt butt--left butt--add [ m-0 ]" for="file_file">
+										<label class="butt butt--left [ m-0 ]" for="file_file">
 											{{ form.file(class="form-control", id='file_file', hidden=true) }}
 												Browse
 										</label>
