Replace css link ref with scss-compiled css link

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -30,7 +30,7 @@
 
     <script src="{{ url_for('static', filename='js/dist/commons.bundle.js') }}"></script>
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='./style/dist/style.css') }}">
     {% block head_extras %}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
