Define label color, update margin-bottom
Set color: #9fa9b2, margin-bottom: .25em;

--- a/app/static/style/src/base/_forms.scss
+++ b/app/static/style/src/base/_forms.scss
@@ -26,6 +26,11 @@ input { color: #58595b }
 
 /* label */
 
+label {
+  color: #9fa9b2;
+  margin-bottom: .25em;
+}
+
 
 /* Class applied to required form labels */
 .required {
