Add background-color #F0F3F7 to even .chunk divs

--- a/app/static/style/src/base/_backgrounds.scss
+++ b/app/static/style/src/base/_backgrounds.scss
@@ -9,12 +9,13 @@
 
 /* Background colors for sections */
 section:nth-of-type(2n+1) .chunk {
-  background-color: #f7f7f7;
+  background-color: #F9F9F9;
 }
 
 section:nth-of-type(2n) .chunk {
   /* background-color: #e3f1d7; */
   /* background-color: #f7fbf3; */
+  background-color: #F0F3F7;
 }
 
 
