Increase col sizing for form.name
Change .col-md-6 to .col

--- a/app/templates/park.html
+++ b/app/templates/park.html
@@ -46,7 +46,7 @@
 							<div class="[ col-md-3 ]">
 								{{ form.name.label }}
 							</div>
-							<div class="[ col-md-6 ]">
+							<div class="[ col ]">
 								{{ form.name(class="form-control-plaintext", value=park.name) }}
 							</div>
 						</li>
