Remove 'Hind' from font-family cascade

--- a/app/static/style/src/base/_base.scss
+++ b/app/static/style/src/base/_base.scss
@@ -22,7 +22,7 @@ body {
   color: color(grey--d);
   max-width: 100%;
   font-size: 21px;
-  font-family: 'Arimo', 'Hind', sans-serif;
+  font-family: 'Arimo', sans-serif;
   hyphens: auto;
 }
 
