Remove .head__h1 modifier text-colors

--- a/app/static/style/src/base/_base.scss
+++ b/app/static/style/src/base/_base.scss
@@ -37,13 +37,8 @@ body {
 h1 {}
 
 .head__h1 { font-size: 4rem; }
-.head__h1--parks { color: darken(color(green--d), 22%); }
-.head__h1--exhibitions { color: darken(color(purple--l), 25%); }
-.head__h1--artworks { color: darken(color(blue--l), 25%); }
-.head__h1--artists { color: darken(color(pink--l), 25%); }
-.head__h1--orgs { color: darken(color(orange--l), 25%); }
 
-h2 { color:  color(green--l); }
+h2 { color:  color(green--d); }
 
 h3 {}
 
