--- a/app/templates/artwork_delete.html
+++ b/app/templates/artwork_delete.html
@@ -8,7 +8,7 @@
 
 	<section id="section--head">
 		{% include "include/nav.html" %}
-		<div class="head [ row justify-content-center align-items-center ]">
+		<div class="head head--artworks [ row justify-content-center align-items-center ]">
 			<div class="[ col-md-8 ]">
 				<h1 class="head__h1 head__h1--artworks [ text-center display-3 ]"><b>{{ artwork.name|upper }}</b></h1>
 			</div>
