Add .head--exhibitions modifier to header

--- a/app/templates/exhibition.html
+++ b/app/templates/exhibition.html
@@ -9,7 +9,7 @@
 
 	<section id="section--head">
 		{% include "include/nav.html" %}
-		<div class="head [ row justify-content-center align-items-center ]">
+		<div class="head head--exhibitions [ row justify-content-center align-items-center ]">
 			<div class="[ col-md-8 ]">
 				<h1 class="head__h1 head__h1--exhibitions [ text-center display-3 ]"><b>{{ exhibition.name|upper }}</b></h1>
 			</div>
