--- a/app/templates/org.html
+++ b/app/templates/org.html
@@ -9,7 +9,7 @@
 
 	<section id="section--head">
 		{% include "include/nav.html" %}
-		<div class="head [ row justify-content-center align-items-center ]">
+		<div class="head head--orgs [ row justify-content-center align-items-center ]">
 			<div class="[ col-md-8 ]">
 				<h1 class="head__h1 head__h1--orgs [ text-center display-4 ]"><b>{{ org.name|upper }}</b></h1>
 			</div>
