--- a/app/templates/parks.html
+++ b/app/templates/parks.html
@@ -10,7 +10,7 @@
 
 	<section id="section--head">
 		{% include "include/nav.html" %}
-		<div class="head [ row justify-content-center align-items-center ]">
+		<div class="head head--parks [ row justify-content-center align-items-center ]">
 			<div class="[ col-md-8 ]">	
 				<h1 class="head__h1 head__h1--parks [ text-center display-3 ]"><b>PARKS</b></h1>
 			</div>
