Change .site-nav__link-text color
Change from color(green--l) to color(green--d) for better visibility

--- a/app/static/style/src/base/_layout.scss
+++ b/app/static/style/src/base/_layout.scss
@@ -73,13 +73,13 @@
       }
 
         .site-nav__link-text {
-          border-bottom: 2px solid #b8dd9b;
+          border-bottom: 2px solid color(green--d);
         }
 
 
 
       .site-nav__link:hover a {
-        color:  #b8dd9b;
+        color:  color(green--d);
       }
 
 
