Update alignment, font-size of #file_text

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -40,7 +40,7 @@
 												Browse
 										</label>
 										<div class="f-grow [ form-control text-left align-items-center text-truncate ]">
-											<span class="align-sub" id="file_text"></span>
+											<span class="[ h6 ]" id="file_text"></span>
 										</div>
 									</div>
 								</li>
