Move form.remember and label into a single col

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -62,10 +62,8 @@
 						</li>
 
 						<li class="[ row mb-3 align-items-baseline ]">
-							<div class="[ col-md-3 ]">
+							<div class="[ col ]">
 								{{ form.remember.label }}
-							</div>
-							<div class="[ col-md-9 ]">
 								{{ form.remember }}
 							</div>
 						</li>
