Replace .butt--delete buttons w/ .butt--text

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -78,7 +78,7 @@
 		<section id="section--submit">
 			<div class="[ row justify-content-center text-right ]">
 				<div class="[ col-md-8 py-4 ]">
-					<a id="js-cancel_signup" class="butt butt--delete js-cancel-signup [ btn btn-sm ]" role="button" href="{{ session['url'] }}">Cancel</a>
+					<a id="js-cancel_signup" class="butt butt--text js-cancel-signup [ btn btn-sm ]" role="button" href="{{ session['url'] }}">Cancel</a>
 					<button id="js-post_signup" class="butt butt--add js-post-signup [ ml-2 ]" value="" type="submit">Sign Up</button>
 				</div>
 			</div>
