--- a/app/templates/artwork_delete.html
+++ b/app/templates/artwork_delete.html
@@ -27,7 +27,7 @@
 		<section id="section--submit">
 			<div class="[ row justify-content-center ]">
 				<div class="[ col-md-8 text-right p-4 ]">
-					<a id="js-cancel_artwork" class="js-cancel-form butt butt--edit [ btn btn-sm ]" href="{{ url_for('artwork', id=artwork.id) }}" role="button">Cancel</a>
+					<a id="js-cancel_artwork" class="js-cancel-form butt butt--text [ btn btn-sm ]" href="{{ url_for('artwork', id=artwork.id) }}" role="button">Cancel</a>
 					<input id="js-delete_artwork" type="submit" class="butt butt--delete js-delete-form [ ml-2 btn btn-sm ]" value="Delete">
 				</div>
 			</div>
